objects/ssot__LoyaltyProgramCurrencyTier__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Program Currency Tier Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramCurrencyId__c</fullName>
        <label>Loyalty Program Currency</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramCurrency__c</fullName>
        <label>Loyalty Program Currency</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyTierId__c</fullName>
        <label>Loyalty Tier</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyTier__c</fullName>
        <label>Loyalty Tier</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NegativePointsBalanceLimitNumber__c</fullName>
        <label>Negative Points Balance Limit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729831971058_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramCurrencyTier_LoyaltyPr_rel</label>
        <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramCurrencyTier_LoyaltyPr_rel</relationshipLabel>
        <relationshipName>rel_1729831971058_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729832000130_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramCurrencyTier_LoyaltyTi_rel</label>
        <referenceTo>ssot__LoyaltyTier__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramCurrencyTier_LoyaltyTi_rel</relationshipLabel>
        <relationshipName>rel_1729832000130_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>